--- a/kwordle/public/style.css
+++ b/kwordle/public/style.css
@@ -56,6 +56,10 @@ body {
   font-size: clamp(0.5rem, 2.5vmin, 1.5rem);
 }
 
+button {
+  color: hsl(240, 3%, 7%);
+}
+
 .keyboard {
   display: grid;
   grid-template-columns: repeat(20, minmax(auto, 1.25em));
